# harmony

./: .gitignore  AGENTS.md  AVALON-handoff-ZEB-138-oracle-validation.md  Cargo.toml  LICENSE  LICENSE-APACHE  LICENSE-MIT  MANIFESTO.md  README.md  flake.nix  manifest
crates/harmony-agent/: Cargo.toml
crates/harmony-agent/src/: lib.rs  task_id.rs  types.rs  wire.rs
crates/harmony-athenaeum/: Cargo.toml
crates/harmony-athenaeum/src/: addr.rs  athenaeum.rs  book.rs  encrypted.rs  encyclopedia.rs  hash.rs  lib.rs  volume.rs
crates/harmony-browser/: Cargo.toml
crates/harmony-browser/src/: core.rs  error.rs  event.rs  lib.rs  trust.rs  types.rs  vine.rs
crates/harmony-browser/tests/: core_approve.rs  core_content.rs  core_navigation.rs  core_subscriptions.rs  events.rs  integration.rs  parse.rs  trust.rs  types.rs
crates/harmony-compute/: Cargo.toml
crates/harmony-compute/src/: error.rs  lib.rs  runtime.rs  types.rs  validate.rs  wasmi_runtime.rs  wasmtime_runtime.rs
crates/harmony-content/: Cargo.toml
crates/harmony-content/src/: blob.rs  bloom.rs  book.rs  bundle.rs  cache.rs  chunker.rs  cid.rs  cuckoo.rs  dag.rs  delta.rs  error.rs  flatpack.rs  lib.rs  lru.rs  replica.rs  reticulum_bridge.rs  sketch.rs  storage_tier.rs  vine.rs  zenoh_bridge.rs
crates/harmony-crdt-sync/: Cargo.toml
crates/harmony-crdt-sync/src/: backfill_latch.rs  lib.rs  verified_log.rs
crates/harmony-credential/: Cargo.toml
crates/harmony-credential/src/: claim.rs  credential.rs  disclosure.rs  error.rs  import.rs  jsonld.rs  lib.rs  status_list.rs  verify.rs
crates/harmony-crypto/: Cargo.toml
crates/harmony-crypto/src/: aead.rs  capability.rs  error.rs  fernet.rs  hash.rs  hkdf.rs  hybrid_kem.rs  lib.rs  ml_dsa.rs  ml_kem.rs  password_envelope.rs  sealed_box.rs  serde_helpers.rs  x25519.rs
crates/harmony-db/: Cargo.toml
crates/harmony-db/examples/: mail_workflow.rs
crates/harmony-db/src/: commit.rs  db.rs  error.rs  lib.rs  persist.rs  store.rs  table.rs  types.rs
crates/harmony-discovery/: Cargo.toml
crates/harmony-discovery/src/: error.rs  lib.rs  manager.rs  record.rs  resolve.rs  verify.rs
crates/harmony-engram/: Cargo.toml
crates/harmony-engram/src/: chronos.rs  error.rs  hash.rs  lib.rs  manifest.rs  resolve.rs
crates/harmony-groups/: Cargo.toml
crates/harmony-groups/src/: dag.rs  error.rs  lib.rs  op.rs  resolver.rs  sync.rs  types.rs
crates/harmony-identity/: Cargo.toml
crates/harmony-identity/src/: crypto_suite.rs  did.rs  did_document.rs  error.rs  identity.rs  identity_ref.rs  lib.rs  pq_identity.rs  puzzle.rs  ucan.rs  verify.rs
crates/harmony-identity/tests/: reticulum_interop.rs
crates/harmony-inference/: Cargo.toml
crates/harmony-inference/src/: block_attnres.rs  chunked_engram.rs  continuous_thought.rs  engine.rs  engram_bridge.rs  engram_residual.rs  error.rs  harmony_engine.rs  harmony_model.rs  kv_compress.rs  kv_quantize.rs  latent_projection.rs  lib.rs  paged_kv.rs  qwen3_ext.rs  sampling.rs  speculative_decode.rs  uq_features.rs  uq_head.rs
crates/harmony-inference/tests/: engram_pipeline.rs  integration.rs  validate_candle.rs
crates/harmony-ingest/: Cargo.toml
crates/harmony-ingest/src/: config.rs  journal.rs  main.rs  manifest.rs  shard.rs  storage.rs
crates/harmony-ingest/tests/: engram_ingest.rs
crates/harmony-iroh/: Cargo.toml
crates/harmony-iroh/src/: dispatch.rs  endpoint.rs  error.rs  lib.rs
crates/harmony-jain/: Cargo.toml
crates/harmony-jain/src/: actions.rs  catalog.rs  config.rs  engine.rs  error.rs  lib.rs  scoring.rs  types.rs
crates/harmony-jcs/: Cargo.toml
crates/harmony-jcs/src/: lib.rs
crates/harmony-kel/: Cargo.toml
crates/harmony-kel/src/: commitment.rs  error.rs  event.rs  lib.rs  log.rs
crates/harmony-kitri/: Cargo.toml
crates/harmony-kitri/src/: checkpoint.rs  compensation.rs  dag.rs  engine.rs  error.rs  event.rs  io.rs  lib.rs  manifest.rs  program.rs  retry.rs  staging.rs  trust.rs
crates/harmony-mail/: Cargo.toml
crates/harmony-mail-discovery/: Cargo.toml
crates/harmony-mail-discovery/src/: cache.rs  claim.rs  dns.rs  http.rs  lib.rs  resolver.rs  test_support.rs
crates/harmony-mail-discovery/tests/: resolver_integration.rs
crates/harmony-mail/src/: address.rs  auth.rs  config.rs  error.rs  imap.rs  imap_codec.rs  imap_parse.rs  imap_render.rs  imap_store.rs  io.rs  lib.rs  mailbox.rs  mailbox_manager.rs  main.rs  message.rs  outbound.rs  registry.rs  remote_delivery.rs  server.rs  smtp.rs  smtp_parse.rs  spam.rs  tls.rs  translate.rs  trust.rs
crates/harmony-mail/tests/: smtp_remote_delivery_integration.rs  smtp_remote_rcpt_admission_integration.rs
crates/harmony-mailbox/: Cargo.toml
crates/harmony-mailbox/src/: error.rs  lib.rs  mailbox.rs  message.rs
crates/harmony-memo/: Cargo.toml
crates/harmony-memo/src/: create.rs  lib.rs  store.rs  verify.rs
crates/harmony-model/: Cargo.toml
crates/harmony-model/src/: lib.rs  manifest.rs  registry.rs  wire.rs
crates/harmony-node/: Cargo.toml  build.rs
crates/harmony-oluo/: Cargo.toml
crates/harmony-owner/: Cargo.toml  README.md
training/: pyproject.toml  run_prep_with_rss.sh
training/ct87/: __init__.py  coconut.py  diag_memory.py  engram.py  eval.py  export_gguf.py  generate_engram_table.py  generate_oracle_table.py  generate_sparse_uncollided_table.py  generate_test_fixtures.py  generate_validation_fixtures.py  latent_projection.py  model.py  mtp.py  optim.py  prepare_data.py  qat.py  train.py  uq.py
training/scripts/: forensic_eta_b_capgap.py  probe_layer_decay.py  probe_skip_to_logit.py
training/tests/: test_capacity_gap.py  test_checkpoint.py  test_coconut.py  test_consolidation.py  test_ema_baseline_subtract.py  test_engram.py  test_eval.py  test_export_gguf.py  test_forensic_cross_table_probe.py  test_forensic_q_v_probes.py  test_generate_engram_table.py  test_generate_oracle_table.py  test_iota_q_diversity.py  test_latent_projection.py  test_layer_decay_probe.py  test_model.py  test_optim.py  test_prepare_data.py  test_skip_to_logit_router.py  test_train.py  test_uq.py  test_v_contrast.py
(+656 files in other folders)
