[workspace]
resolver = "2"
members = [
    "crates/harmony-athenaeum",
    "crates/harmony-browser",
    "crates/harmony-compute",
    "crates/harmony-content",
    "crates/harmony-crypto",
    "crates/harmony-identity",
    "crates/harmony-jain",
    "crates/harmony-mail",
    "crates/harmony-node",
    "crates/harmony-platform",
    "crates/harmony-reticulum",
    "crates/harmony-roxy",
    "crates/harmony-workflow",
    "crates/harmony-zenoh",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/zeblithic/harmony"
rust-version = "1.81"

[workspace.dependencies]
# Cryptographic primitives — default-features = false so bare-metal consumers
# (harmony-os/harmony-boot) can compile without std.  Each crate's `std`
# feature re-enables what it needs.
sha2 = { version = "0.10", default-features = false }
blake3 = { version = "1", default-features = false }
hkdf = { version = "0.12", default-features = false }
hmac = { version = "0.12", default-features = false }
aes = { version = "0.8", default-features = false }
cbc = { version = "0.1", default-features = false, features = ["alloc", "block-padding"] }
chacha20poly1305 = { version = "0.10", default-features = false, features = ["alloc"] }

# Elliptic curve cryptography
ed25519-dalek = { version = "2", default-features = false, features = ["rand_core", "fast", "zeroize", "alloc"] }
x25519-dalek = { version = "2", default-features = false, features = ["static_secrets", "alloc", "precomputed-tables", "zeroize"] }

# Utilities
rand = "0.8"
rand_core = { version = "0.6", default-features = false }
zeroize = { version = "1", default-features = false, features = ["derive", "alloc"] }
subtle = { version = "2", default-features = false }
thiserror = { version = "2", default-features = false }
hashbrown = { version = "0.15", default-features = false, features = ["default-hasher", "inline-more", "allocator-api2", "equivalent"] }
# rmp 0.8 has no `alloc` feature — only `std` (default). The no_std surface
# (encode/decode on byte slices) works without any features enabled.
rmp = { version = "0.8", default-features = false }
bitflags = { version = "2", default-features = false }
hex = "0.4"
libm = "0.2"
postcard = { version = "1", default-features = false, features = ["alloc"] }

# WASM runtime
wasmi = "1"
wasmtime = "38"

# CLI and config
serde = { version = "1", default-features = false }
toml = "0.8"
clap = { version = "4", features = ["derive"] }

# Internal crates — default-features = false so bare-metal consumers
# (harmony-os/harmony-boot) can compile the dependency graph without std.
# Crates that need std re-enable it via their own `std` feature.
harmony-athenaeum = { path = "crates/harmony-athenaeum", default-features = false }
harmony-compute = { path = "crates/harmony-compute" }
harmony-content = { path = "crates/harmony-content", default-features = false }
harmony-crypto = { path = "crates/harmony-crypto", default-features = false }
harmony-identity = { path = "crates/harmony-identity", default-features = false }
harmony-jain = { path = "crates/harmony-jain", default-features = false }
harmony-platform = { path = "crates/harmony-platform", default-features = false }
harmony-reticulum = { path = "crates/harmony-reticulum", default-features = false }
harmony-roxy = { path = "crates/harmony-roxy", default-features = false }
harmony-workflow = { path = "crates/harmony-workflow" }
harmony-zenoh = { path = "crates/harmony-zenoh" }
