[workspace]
resolver = "2"
members = [
    "crates/harmony-agent",
    "crates/harmony-athenaeum",
    "crates/harmony-browser",
    "crates/harmony-compute",
    "crates/harmony-contacts",
    "crates/harmony-credential",
    "crates/harmony-discovery",
    "crates/harmony-engram",
    "crates/harmony-content",
    "crates/harmony-db",
    "crates/harmony-crypto",
    "crates/harmony-identity",
    "crates/harmony-ingest",
    "crates/harmony-inference",
    "crates/harmony-model",
    "crates/harmony-jain",
    "crates/harmony-jcs",
    "crates/harmony-kel",
    "crates/harmony-kitri",
    "crates/harmony-mail",
    "crates/harmony-memo",
    "crates/harmony-node",
    "crates/harmony-peers",
    "crates/harmony-profile",
    "crates/harmony-platform",
    "crates/harmony-reticulum",
    "crates/harmony-runtime",
    "crates/harmony-roxy",
    "crates/harmony-trust",
    "crates/harmony-tunnel",
    "crates/harmony-oluo",
    "crates/harmony-semantic",
    "crates/harmony-workflow",
    "crates/harmony-sdjwt",
    "crates/harmony-zenoh",
    "crates/harmony-rawlink",
    "crates/harmony-s3",
    "crates/harmony-search",
    "crates/harmony-speculative",
    "crates/harmony-telemetry",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/zeblithic/harmony"
rust-version = "1.85"

[workspace.dependencies]
# Cryptographic primitives — default-features = false so bare-metal consumers
# (harmony-os/harmony-boot) can compile without std.  Each crate's `std`
# feature re-enables what it needs.
sha2 = { version = "0.10", default-features = false }
blake3 = { version = "1", default-features = false }
hkdf = { version = "0.12", default-features = false }
hmac = { version = "0.12", default-features = false }
aes = { version = "0.8", default-features = false }
cbc = { version = "0.1", default-features = false, features = ["alloc", "block-padding"] }
chacha20poly1305 = { version = "0.10", default-features = false, features = ["alloc"] }
argon2 = { version = "0.5", default-features = false, features = ["alloc"] }

# Post-quantum cryptography
ml-kem = { version = "0.3.0-rc.0", default-features = false, features = ["zeroize"] }
ml-dsa = { version = "0.1.0-rc.7", default-features = false, features = ["rand_core", "zeroize"] }
hybrid-array = { version = "0.2", default-features = false }
# Pin keccak to 0.2.0-rc.2 — the stable 0.2.0 release removed KeccakP1600
# which sha3 0.11.0-rc.8 (a transitive dep via ml-dsa) requires.
keccak = "=0.2.0-rc.2"

# Elliptic curve cryptography
ed25519-dalek = { version = "2", default-features = false, features = ["rand_core", "fast", "zeroize", "alloc"] }
x25519-dalek = { version = "2", default-features = false, features = ["static_secrets", "alloc", "precomputed-tables", "zeroize"] }

# Utilities
ryu = "1"
rand = "0.8"
rand_core = { version = "0.6", default-features = false }
zeroize = { version = "1", default-features = false, features = ["derive", "alloc"] }
subtle = { version = "2", default-features = false }
thiserror = { version = "2", default-features = false }
hashbrown = { version = "0.15", default-features = false, features = ["default-hasher", "inline-more", "allocator-api2", "equivalent"] }
# rmp 0.8 has no `alloc` feature — only `std` (default). The no_std surface
# (encode/decode on byte slices) works without any features enabled.
rmp = { version = "0.8", default-features = false }
bitflags = { version = "2", default-features = false }
bs58 = { version = "0.5", default-features = false, features = ["alloc"] }
hex = "0.4"
half = { version = "2", default-features = false }
safetensors = "0.4"
libm = "0.2"
postcard = { version = "1", default-features = false, features = ["alloc"] }
xxhash-rust = { version = "0.8", default-features = false, features = ["xxh64"] }
ciborium = { version = "0.2", default-features = false }

# WASM runtime
wasmi = "1"
wasmparser = "0.228"
wasmtime = "38"
wat = "1"

# ML inference
candle-core = "0.9"
candle-nn = "0.9"
tokenizers = "0.22"

# AWS SDK
aws-config = "1"
aws-sdk-s3 = "1"

# Networking
axum = { version = "0.8", default-features = false, features = ["tokio", "http1"] }
tokio = { version = "1", features = ["rt", "net", "time", "macros", "sync", "signal"] }
tower-http = { version = "0.6", default-features = false }
zenoh = "1"
libc = "0.2"
iroh = "0.91"
tokio-util = { version = "0.7", features = ["codec"] }
futures-util = "0.3"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CLI and config
serde = { version = "1", default-features = false }
serde_json = { version = "1", default-features = false, features = ["alloc"] }
base64 = { version = "0.22", default-features = false }
toml = "0.8"
clap = { version = "4", features = ["derive"] }

# Internal crates — default-features = false so bare-metal consumers
# (harmony-os/harmony-boot) can compile the dependency graph without std.
# Crates that need std re-enable it via their own `std` feature.
harmony-agent = { path = "crates/harmony-agent" }
harmony-athenaeum = { path = "crates/harmony-athenaeum", default-features = false }
harmony-compute = { path = "crates/harmony-compute" }
harmony-contacts = { path = "crates/harmony-contacts", default-features = false }
harmony-credential = { path = "crates/harmony-credential", default-features = false }
harmony-discovery = { path = "crates/harmony-discovery", default-features = false }
harmony-engram = { path = "crates/harmony-engram", default-features = false }
harmony-content = { path = "crates/harmony-content", default-features = false }
harmony-db = { path = "crates/harmony-db" }
harmony-crypto = { path = "crates/harmony-crypto", default-features = false }
harmony-identity = { path = "crates/harmony-identity", default-features = false }
harmony-jain = { path = "crates/harmony-jain", default-features = false }
harmony-jcs = { path = "crates/harmony-jcs", default-features = false }
harmony-kel = { path = "crates/harmony-kel", default-features = false }
harmony-kitri = { path = "crates/harmony-kitri", default-features = false }
harmony-memo = { path = "crates/harmony-memo", default-features = false }
harmony-peers = { path = "crates/harmony-peers", default-features = false }
harmony-profile = { path = "crates/harmony-profile", default-features = false }
harmony-platform = { path = "crates/harmony-platform", default-features = false }
harmony-reticulum = { path = "crates/harmony-reticulum", default-features = false }
harmony-runtime = { path = "crates/harmony-runtime", default-features = false }
harmony-sdjwt = { path = "crates/harmony-sdjwt", default-features = false }
harmony-roxy = { path = "crates/harmony-roxy", default-features = false }
harmony-oluo = { path = "crates/harmony-oluo", default-features = false }
harmony-semantic = { path = "crates/harmony-semantic", default-features = false }
harmony-trust = { path = "crates/harmony-trust", default-features = false }
harmony-tunnel = { path = "crates/harmony-tunnel", default-features = false }
harmony-workflow = { path = "crates/harmony-workflow" }
harmony-rawlink = { path = "crates/harmony-rawlink" }
harmony-s3 = { path = "crates/harmony-s3" }
harmony-speculative = { path = "crates/harmony-speculative" }
harmony-telemetry = { path = "crates/harmony-telemetry" }
harmony-inference = { path = "crates/harmony-inference" }
harmony-zenoh = { path = "crates/harmony-zenoh" }

# Optimized profile for cross-compiled deployment binaries (OpenWRT, RPi).
# Does not affect normal `--release` builds — use `--profile release-cross`.
[profile.release-cross]
inherits = "release"
strip = true
lto = "thin"

