[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ct87"
version = "0.1.0"
description = "PyTorch training scaffold for the ct87 custom model"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.2",
    "safetensors>=0.4",
    "datasets>=2.16",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
