[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ct87"
version = "0.1.0"
description = "PyTorch training scaffold for the ct87 custom model"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.2",
    "safetensors>=0.4",
    "datasets>=2.16",
    "gguf>=0.6",
    "transformers>=4.38",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]
teacher = [
    "scikit-learn>=1.0",
    "torch>=2.2",
    "transformers>=4.38",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "network: tests that require network access",
]
