[package]
name = "harmony-athenaeum"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "32-bit content-addressed page system for on-device memory"

[features]
default = ["std"]
std = []
serde = ["dep:serde"]

[dependencies]
sha2 = { workspace = true }
serde = { workspace = true, features = ["derive", "alloc"], optional = true }
