[package]
name = "harmony-browser"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Sans-I/O browser core for Harmony content-addressed networks"

[dependencies]
harmony-content = { path = "../harmony-content" }
harmony-identity = { path = "../harmony-identity" }
hashbrown = { workspace = true }
hex = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
rand = "0.8"
