[package]
name = "harmony-compute"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "WASM compute engine with cooperative yielding for the Harmony decentralized stack"

[features]
default = []
no-neon = ["harmony-crypto/no-neon"]
wasmtime = ["dep:wasmtime"]

[dependencies]
harmony-crypto = { workspace = true, features = ["std"] }
thiserror.workspace = true
wasmi = { workspace = true }
wasmtime = { workspace = true, optional = true }
