[package]
name = "harmony-content"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Content-addressed storage primitives for the Harmony decentralized stack"

[dependencies]
harmony-crypto.workspace = true
thiserror.workspace = true

[dev-dependencies]
hex.workspace = true
