[package]
name = "harmony-content"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Content-addressed storage primitives for the Harmony decentralized stack"

[features]
default = ["std"]
std = ["harmony-crypto/std", "harmony-zenoh/std", "thiserror/std"]

[dependencies]
harmony-crypto.workspace = true
thiserror.workspace = true
hex = { workspace = true }
harmony-zenoh.workspace = true
hashbrown = { workspace = true }
