[package]
name = "harmony-crdt-sync"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Verified-CRDT-over-pubsub sync substrate — backfill/backoff latches (grows to host the verified-log and snapshot sync engines)"

[features]
default = ["std"]
# `std` is default-on but non-essential: the crate is `no_std` + `alloc`
# (the verified-log engine and backfill latches need only `alloc`; the
# snapshot sync engine that will land later needs a runtime and lives behind
# this feature).
std = []

[dependencies]

[dev-dependencies]
