[package]
name = "harmony-credential"
description = "Compact binary verifiable credentials with selective disclosure for the Harmony network"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
ed25519-dalek = { workspace = true }
harmony-crypto = { workspace = true, features = ["serde"] }
harmony-identity = { workspace = true }
serde = { workspace = true, default-features = false, features = ["derive", "alloc"] }
postcard = { workspace = true }

[dependencies.hashbrown]
workspace = true
optional = true

[features]
default = ["std"]
std = [
    "harmony-crypto/std",
    "harmony-identity/std",
    "postcard/use-std",
    "serde/std",
]
test-utils = ["hashbrown"]

[dev-dependencies]
rand = { workspace = true }
hashbrown = { workspace = true }
