[package]
name = "harmony-credential"
description = "Compact binary verifiable credentials with selective disclosure for the Harmony network"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
harmony-crypto = { workspace = true, features = ["serde"] }
harmony-identity = { workspace = true }
serde = { workspace = true, default-features = false, features = ["derive", "alloc"] }
postcard = { workspace = true }
serde_json = { version = "1", optional = true }
base64 = { version = "0.22", optional = true }
bs58 = { version = "0.5", optional = true }

[dependencies.hashbrown]
workspace = true
optional = true

[features]
default = ["std"]
std = [
    "harmony-crypto/std",
    "harmony-identity/std",
    "postcard/use-std",
    "serde/std",
]
test-utils = ["hashbrown"]
jsonld = ["dep:serde_json", "dep:base64", "dep:bs58", "std"]

[dev-dependencies]
rand = { workspace = true }
hashbrown = { workspace = true }
