[package]
name = "harmony-crypto"
description = "Cryptographic primitives for the Harmony decentralized network stack"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
sha2 = { workspace = true }
blake3 = { workspace = true }
hkdf = { workspace = true }
hmac = { workspace = true }
aes = { workspace = true }
cbc = { workspace = true }
chacha20poly1305 = { workspace = true }
ml-kem = { workspace = true }
ml-dsa = { workspace = true }
hybrid-array = { workspace = true }
rand_core = { workspace = true }
zeroize = { workspace = true }
subtle = { workspace = true }
thiserror = { workspace = true }

[features]
default = ["std"]
std = [
    "rand_core/getrandom",
    "sha2/std",
    "blake3/std",
    "hmac/std",
    "hkdf/std",
    "chacha20poly1305/getrandom",
    "subtle/std",
    "thiserror/std",
    # ml-kem, ml-dsa, hybrid-array are no_std-clean by default; no std feature to re-enable
    # aes 0.8 is no_std-clean by default; no std feature to re-enable
]

[dev-dependencies]
rand = { workspace = true }
hex = { workspace = true }
