[package]
name = "harmony-crypto"
description = "Cryptographic primitives for the Harmony decentralized network stack"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
sha2 = { workspace = true }
blake3 = { workspace = true }
hkdf = { workspace = true }
hmac = { workspace = true }
aes = { workspace = true }
cbc = { workspace = true }
chacha20poly1305 = { workspace = true }
ml-kem = { workspace = true }
ml-dsa = { workspace = true }
hybrid-array = { workspace = true }
keccak = { workspace = true }
x25519-dalek = { workspace = true }
rand_core = { workspace = true }
zeroize = { workspace = true }
subtle = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true, optional = true, default-features = false, features = ["derive", "alloc"] }

[features]
default = ["std"]
serde = ["dep:serde"]
# Disable BLAKE3 NEON assembly — use pure Rust fallback. Required for
# cross-compilation from non-aarch64 hosts without a C cross-compiler.
no-neon = ["blake3/no_neon"]
std = [
    "rand_core/getrandom",
    "sha2/std",
    "blake3/std",
    "hmac/std",
    "hkdf/std",
    "chacha20poly1305/getrandom",
    "x25519-dalek/getrandom",
    "subtle/std",
    "thiserror/std",
    "serde?/std",
    # ml-kem, ml-dsa, hybrid-array are no_std-clean by default; no std feature to re-enable
    # aes 0.8 is no_std-clean by default; no std feature to re-enable
]

[dev-dependencies]
rand = { workspace = true }
hex = { workspace = true }
postcard = { workspace = true }
