[package]
name = "harmony-engram"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[features]
default = []
std = []

[dependencies]
half = { workspace = true }
postcard = { workspace = true }
serde = { workspace = true, features = ["derive"] }
xxhash-rust = { workspace = true }
