[package]
name = "harmony-engram"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
description = "Sans-I/O Engram embedding table lookup client"

[features]
default = []
std = ["thiserror/std"]

[dependencies]
half = { workspace = true }
libm = { workspace = true }
postcard = { workspace = true }
serde = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
xxhash-rust = { workspace = true }
