[package]
name = "harmony-identity"
description = "Self-sovereign Ed25519/X25519 identity management for the Harmony network"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
harmony-crypto = { workspace = true }
harmony-platform = { workspace = true }
ed25519-dalek = { workspace = true }
x25519-dalek = { workspace = true }
rand_core = { workspace = true }
zeroize = { workspace = true }
thiserror = { workspace = true }
hashbrown = { workspace = true }

[features]
default = ["std"]
std = ["harmony-crypto/std", "harmony-platform/std", "rand_core/getrandom"]
test-utils = []

[dev-dependencies]
rand = { workspace = true }
hex = { workspace = true }
