[package]
name = "harmony-identity"
description = "Self-sovereign Ed25519/X25519 identity management for the Harmony network"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
harmony-crypto = { workspace = true }
harmony-platform = { workspace = true }
ed25519-dalek = { workspace = true }
x25519-dalek = { workspace = true }
rand_core = { workspace = true }
zeroize = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true, default-features = false, features = ["derive", "alloc"] }
hashbrown = { workspace = true, optional = true }

[features]
default = ["std"]
no-neon = ["harmony-crypto/no-neon"]
std = [
    "harmony-crypto/std",
    "harmony-platform/std",
    "rand_core/getrandom",
    "ed25519-dalek/std",
    "x25519-dalek/getrandom",
    "thiserror/std",
    "serde/std",
]
test-utils = ["dep:hashbrown"]

[dev-dependencies]
rand = { workspace = true }
hex = { workspace = true }
hashbrown = { workspace = true }
postcard = { workspace = true }
