[package]
name = "harmony-inference"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
description = "GGUF model loader and inference engine wrapping candle-transformers"

[features]
default = []
cuda = ["candle-core/cuda", "candle-nn/cuda"]
metal = ["candle-core/metal", "candle-nn/metal"]

[dependencies]
candle-core = { workspace = true }
candle-nn = { workspace = true }
tokenizers = { workspace = true }
rand = { workspace = true }
thiserror = { workspace = true, features = ["std"] }
tracing = { workspace = true }
