[package]
name = "harmony-inference"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
description = "GGUF model loader and inference engine for quantized Qwen3 models"

[features]
default = []
cuda = ["candle-core/cuda", "candle-nn/cuda"]
metal = ["candle-core/metal", "candle-nn/metal"]
kv-compress = []

[dependencies]
candle-core = { workspace = true }
candle-nn = { workspace = true }
harmony-engram = { workspace = true }
tokenizers = { workspace = true }
rand = { workspace = true }
thiserror = { workspace = true, features = ["std"] }
tracing = { workspace = true }
