[package]
name = "harmony-ingest"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
description = "CLI tool for ingesting data into Harmony CAS"

[[bin]]
name = "harmony-ingest"
path = "src/main.rs"

[dependencies]
clap = { workspace = true }
half = { workspace = true }
harmony-content = { workspace = true, features = ["std"] }
harmony-engram = { workspace = true, features = ["std"] }
harmony-s3 = { workspace = true }
hex.workspace = true
safetensors = { workspace = true }
serde = { workspace = true, features = ["derive"] }
tokio = { workspace = true }
toml = { workspace = true }
tracing.workspace = true
tracing-subscriber = { workspace = true }
