[package]
name = "harmony-jcs"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "RFC 8785 JSON Canonicalization Scheme"

[features]
default = []
std = ["serde_json/std"]

[dependencies]
serde_json = { workspace = true, default-features = false, features = ["alloc"] }

[dev-dependencies]
