[package]
name = "harmony-kel"
description = "KERI-inspired Key Event Log with pre-rotation for the Harmony network"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
harmony-crypto = { workspace = true, features = ["serde"] }
harmony-identity = { workspace = true }
serde = { workspace = true, default-features = false, features = ["derive", "alloc"] }
postcard = { workspace = true }

[features]
default = ["std"]
no-neon = ["harmony-crypto/no-neon"]
std = [
    "harmony-crypto/std",
    "harmony-identity/std",
    "postcard/use-std",
    "serde/std",
]

[dev-dependencies]
rand = { workspace = true }
